--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-fastapi==0.115.12
-uvicorn==0.34.3
+fastapi
+uvicorn
 easyocr
-opencv-python==4.11.0.86
-pillow==11.2.1
+opencv-python-headless
 numpy
+pillow
